src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';
/* initial styles project landingPage */
/* TODO: Inicial o @mediaQ do body após finalizar projeto ou até sair da parte do body */
:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}
@media (prefers-color-scheme: dark) {
  :root {
    /* --foreground-rgb: 255, 255, 255; */
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}
html, body {
  min-height: 100vh;
  max-height: fit-content;
}
body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));

    font-size: 16px;
    font-weight: normal;
    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
}

/* plus styles project landingPage */

:root {
  --primary-background: #FFF;
  --primary-background-footer: #8ADDF0;

  --primary-color: hsl(0, 0%, 100%);
}

.Wrapper-container {
  background-color: #fff;
  min-width: 100%;
  min-height: 100%;
  text-align: center;
}

img {
  max-width: 100%;
}

:root {
  --min-h-header: 14rem;
  --min-h-footer: 26rem;
}

.class-Header {
  background-color: var(--primary-background);
  min-width: 100%;
  min-height: var(--min-h-header);
  max-height: fit-content;
}

.class-Footer {
  min-height: var(--min-h-footer);
  max-height: fit-content;
  background-color: var(--primary-background-footer);
}

.class-Main {
  background-color: var(--primary-background);
  /* background-color: var(--primary-background-color-border); */
  min-height: calc(100vh - (var(--min-h-header) - var(--min-h-footer)));
}

